@@ -1,3 +1,11 @@
+2006-04-21  Paolo Borelli  <pborelli@katamail.com>
+
+	* data/baobab.glade:
+	* src/baobab-utils.[ch]:
+	* src/baobab-callbacks.[ch]:
+
+	Add Help->Contents menu
+
 2006-04-25  Fabio Marzocca  <thesaltydog@gmail.com>
 
 	* help/C/baobab.xml: editing help file
